chore: Upgrade to Java 17, JUnit 5, and Kafka 4.0.2 with documentation update (#84)
Upgrade the project build and CI pipeline to require Java 17,
migrate tests to JUnit 5, and update the Kafka base image to 4.0.2.
Refactor Maven plugin configuration for Java 17 compatibility and
update documentation to reflect the new runtime requirement.

Additional changes:
- Upgrade CI workflows to use JDK 17 and refresh dependencies
- Update Maven compiler and related plugin configuration
- Add Java 17 requirement notice to the README
Bump project version to 3.0.0
BREAKING CHANGE: Java 8 support has been removed. The connector now requires Java 17 or later.

Signed-off-by: Joel Hanson <17215044+Joel-hanson@users.noreply.github.com>